Simplify Docker docs